[package]
name = "submitter"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
aetherium-base = { path = "../aetherium-base", features = ["test-utils"] }
aetherium-core = { path = "../aetherium-core" }

async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
mockall.workspace = true
