
[package]
name = "scraper"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
config.workspace = true
console-subscriber.workspace = true
derive_more.workspace = true
ethers.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
prometheus.workspace = true
sea-orm = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
tracing-futures.workspace = true
tracing.workspace = true

aetherium-base = { path = "../../aetherium-base" }
aetherium-core = { path = "../../aetherium-core", features = ["agent"] }
migration = { path = "migration" }

[dev-dependencies]
reqwest.workspace = true
sea-orm = { workspace = true, features = ["mock"]}
tokio-test = "0.4"
tracing-test.workspace = true
ethers-prometheus = { path = "../../ethers-prometheus", features = ["serde"] }
aetherium-ethereum = { path = "../../chains/aetherium-ethereum" }
aetherium-test = { path = "../../aetherium-test" }

[features]
default = ["color-eyre", "oneline-errors"]
oneline-errors = ["aetherium-base/oneline-errors"]
color-eyre = ["aetherium-base/color-eyre"]
