cargo-features = ["workspace-inheritance"]

[package]
name = "aetherium-operation-verifier"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
aetherium-application = { path = "../aetherium-application" }
aetherium-core = { path = "../../aetherium-core" }

async-trait.workspace = true
thiserror.workspace = true
