cargo-features = ["workspace-inheritance"]

[package]
name = "aetherium-warp-route"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
aetherium-core = { path = "../../aetherium-core" }
