
[package]
name = "aetherium-cosmos"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bech32 = { workspace = true }
cosmrs = { workspace = true, features = ["cosmwasm", "tokio", "grpc", "rpc"] }
cosmwasm-std = { workspace = true }
crypto = { path = "../../utils/crypto" }
derive-new = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
aet = { workspace = true }
aet-tls = { workspace = true }
ibc-proto = { workspace = true }
injective-protobuf = { workspace = true }
injective-std = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
pin-project.workspace = true
protobuf = { workspace = true }
ripemd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha256 = { workspace = true }
tendermint = { workspace = true, features = ["rust-crypto", "secp256k1"] }
tendermint-rpc = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-native-roots",
] }
tower.workspace = true
tracing = { workspace = true }
tracing-futures = { workspace = true }
url = { workspace = true }

aetherium-core = { path = "../../aetherium-core", features = ["async"] }
aetherium-cosmwasm-interface.workspace = true
aetherium-metric = { path = "../../aetherium-metric" }
aetherium-operation-verifier = { path = "../../applications/aetherium-operation-verifier" }
aetherium-warp-route = { path = "../../applications/aetherium-warp-route" }
